Fix padding margin on tablet media.

--- a/style.css
+++ b/style.css
@@ -159,6 +159,29 @@ button {
   border-radius: 8px;
 }
 
+article.hero {
+  padding: 0 1em 0 1em;
+  margin-bottom: 4em;
+}
+
+article .hero_footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-top: 2em;
+}
+
+article span {
+  font-size: var(--fs-500);
+  text-transform: uppercase;
+  font-weight: var(--fw-bold);
+  color: var(--clr-neutral-200);
+}
+
+.hero_p {
+  text-align: initial;
+}
+
 .header_btn {
   background-color: var(--clr-neutral-300);
   color: var(--clr-neutral-100);
@@ -187,8 +210,14 @@ button {
   .grid_column-2 {
     display: grid;
     grid-template-columns: 1fr 1fr;
+
     margin: 0 auto;
     max-width: 1110px;
+  }
+
+  .img_top {
+    margin-left: 170px;
+    width: 478px;
   }
 
   .column_1-2 {
@@ -199,6 +228,16 @@ button {
   .column_2-3 {
     grid-column-start: 2;
     grid-column-end: 3;
+  }
+
+  button {
+    border: none;
+    width: 175px;
+    height: 58px;
+    text-transform: uppercase;
+    font-size: 1rem;
+    font-weight: var(--fw-extra-bold);
+    border-radius: 8px;
   }
 }
 
@@ -243,29 +282,6 @@ button {
 
 article.product {
   margin-top: 4em;
-}
-
-article.hero {
-  padding: 0 1em 0 1em;
-  margin-bottom: 4em;
-}
-
-article .hero_footer {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  margin-top: 2em;
-}
-
-article span {
-  font-size: var(--fs-500);
-  text-transform: uppercase;
-  font-weight: var(--fw-bold);
-  color: var(--clr-neutral-200);
-}
-
-.hero_p {
-  text-align: initial;
 }
 
 .product {
